grey out unused links added paper

--- a/art249/index.html
+++ b/art249/index.html
@@ -40,29 +40,30 @@
                 <h1>Web Site</h1>
                 <h3>A bespoke client-based website UI with a design system</h3>
                 <ul>
-                    <li><a href="#">Project Brief</a></li>
+                    <li><a href="https://docs.google.com/document/d/1cmEIXDks6_f9pieVwxtlWxm_BZuVjNZeBvd4xqwl5GE/edit">Project
+                            Brief</a></li>
                 </ul>
 
                 <h4>Conceptual Plans</h4>
 
                 <ul>
-                    <li><a href="#">Site Map</a></li>
-                    <li><a href="#">Lo-Fi Wireframes / Protoype</a></li>
-                    <li><a href="#">Design System / Style Tiles</a></li>
+                    <li><a href="#" class="coming-soon">Site Map</a></li>
+                    <li><a href="#" class="coming-soon">Lo-Fi Wireframes / Protoype</a></li>
+                    <li><a href="#" class="coming-soon">Design System / Style Tiles</a></li>
                 </ul>
 
                 <h4>Iterative Designs</h4>
 
                 <ul>
-                    <li><a href="#">Round 1 Mockups (A+B)</a></li>
-                    <li><a href="#">Round 2 Mockups (C)</a></li>
-                    <li><a href="#">Final Mockups + Protoype</a></li>
+                    <li><a href="#" class="coming-soon">Round 1 Mockups (A+B)</a></li>
+                    <li><a href="#" class="coming-soon">Round 2 Mockups (C)</a></li>
+                    <li><a href="#" class="coming-soon">Final Mockups + Protoype</a></li>
                 </ul>
 
                 <h4>Case Study / Portfolio Entry</h4>
 
                 <ul>
-                    <li><a href="#">Case Study / Portfolio Entry</a></li>
+                    <li><a href="#" class="coming-soon">Case Study / Portfolio Entry</a></li>
                 </ul>
             </div>
 
@@ -71,29 +72,29 @@
                 <h1>Mobile App</h1>
                 <h3>A client-based mobile app UI design with an interactive prototype</h3>
                 <ul>
-                    <li><a href="#">Project Brief</a></li>
+                    <li><a href="#" class="coming-soon">Project Brief</a></li>
                 </ul>
 
                 <h4>Conceptual Plans</h4>
 
                 <ul>
-                    <li><a href="#">App Map / User Flow Chart</a></li>
-                    <li><a href="#">Lo-Fi Wireframes / Protoype</a></li>
-                    <li><a href="#">Design System / Style Tiles</a></li>
+                    <li><a href="#" class="coming-soon">App Map / User Flow Chart</a></li>
+                    <li><a href="#" class="coming-soon">Lo-Fi Wireframes / Protoype</a></li>
+                    <li><a href="#" class="coming-soon">Design System / Style Tiles</a></li>
                 </ul>
 
                 <h4>Iterative Designs</h4>
 
                 <ul>
-                    <li><a href="#">Round 1 Mockups (A+B)</a></li>
-                    <li><a href="#">Round 2 Mockups (C)</a></li>
-                    <li><a href="#">Final Mockups + Protoype</a></li>
+                    <li><a href="#" class="coming-soon">Round 1 Mockups (A+B)</a></li>
+                    <li><a href="#" class="coming-soon">Round 2 Mockups (C)</a></li>
+                    <li><a href="#" class="coming-soon">Final Mockups + Protoype</a></li>
                 </ul>
 
                 <h4>Case Study / Portfolio Entry</h4>
 
                 <ul>
-                    <li><a href="#">Case Study / Portfolio Entry</a></li>
+                    <li><a href="#" class="coming-soon">Case Study / Portfolio Entry</a></li>
                 </ul>
             </div>
         </section>
