--- a/art298/index.html
+++ b/art298/index.html
@@ -20,7 +20,7 @@
         <nav class="site-nav">
             <ul>
                 <li><a href="../art128/index.html">ART 128</a></li>
-                <li><a href="../art298/index.html">ART 298</a></li>
+                <li><a href="../art249/index.html">ART 249</a></li>
                 <li><a href="../notes/index.html">Notes</a></li>
 
             </ul>
@@ -36,65 +36,18 @@
         <section class="coursework">
 
             <div class="website">
-                <h3>Project #2</h3>
-                <h1>Mobile App</h1>
-                <h3>A client-based mobile app UI design with interactive prototype.</h3>
-                <ul>
-                    <li><a href="#">Project Brief</a></li>
-                </ul>
-
-                <h4>Conceptual Plans</h4>
-
-                <ul>
-                    <li><a href="#">App Map / User Flow Chart</a></li>
-                    <li><a href="#">Lo-Fi Wireframes / Protoype</a></li>
-                    <li><a href="#">Design System / Style Tiles</a></li>
-                </ul>
-
-                <h4>Iterative Designs</h4>
-
-                <ul>
-                    <li><a href="#">Round 1 Mockups (A+B)</a></li>
-                    <li><a href="#">Round 2 Mockups (C)</a></li>
-                    <li><a href="#">Final Mockups + Protoype</a></li>
-                </ul>
-
-                <h4>Case Study / Portfolio Entry</h4>
-
-                <ul>
-                    <li><a href="#">Case Study / Portfolio Entry</a></li>
-                </ul>
+                <h3>Phase 1: Preparation</h3>
+                <li><a href="#" class="coming-soon">Resume</a></li>
+                <li><a href="#" class="coming-soon">Email letter</a></li>
+                <li><a href="#" class="coming-soon">Portfolio</a></li>
             </div>
 
             <div class="website">
-                <h3>Project #2</h3>
-                <h1>Mobile App</h1>
-                <h3>A client-based mobile app UI design with an interactive prototype</h3>
-                <ul>
-                    <li><a href="#">Project Brief</a></li>
-                </ul>
+                <h3>Phase 2: Work / Study</h3>
+                <li><a href="#" class="coming-soon">Study Plan / Contract</a></li>
+                <li><a href="#" class="coming-soon">Time Sheet</a></li>
+                <li><a href="#" class="coming-soon">Final Presentation</a></li>
 
-                <h4>Conceptual Plans</h4>
-
-                <ul>
-                    <li><a href="#">App Map / User Flow Chart</a></li>
-                    <li><a href="#">Lo-Fi Wireframes / Protoype</a></li>
-                    <li><a href="#">Design System / Style Tiles</a></li>
-                </ul>
-
-                <h4>Iterative Designs</h4>
-
-                <ul>
-                    <li><a href="#">Round 1 Mockups (A+B)</a></li>
-                    <li><a href="#">Round 2 Mockups (C)</a></li>
-                    <li><a href="#">Final Mockups + Protoype</a></li>
-                </ul>
-
-                <h4>Case Study / Portfolio Entry</h4>
-
-                <ul>
-                    <li><a href="#">Case Study / Portfolio Entry</a></li>
-                </ul>
             </div>
         </section>
     </main>
