--- a/art298/index.html
+++ b/art298/index.html
@@ -37,7 +37,9 @@
 
             <div class="website">
                 <h3>Phase 1: Preparation</h3>
-                <li><a href="#" class="coming-soon">Resume</a></li>
+                <li><a
+                        href="https://drive.google.com/file/d/18BjaJZwkycXln3EqgwiwaLWhVgRt_mz5/view?usp=drive_link">Resume</a>
+                </li>
                 <li><a href="#" class="coming-soon">Email letter</a></li>
                 <li><a href="#" class="coming-soon">Portfolio</a></li>
             </div>
