--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="description" content="This is my Student Website.">
     <meta name="viewport" content="width=device-width, initial-scale1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- 3D HOVER -->
+    <link rel="stylesheet" href="css/3dhover.css">
+    <!-- MAIN CSS -->
     <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -28,7 +31,7 @@
 
     <main>
         <section class="hero">
-            <h2>Hello! I am Andrew.</h2>
+            <h2 class="hover-3d">Hello! I am Andrew.</h2>
             <p> I am an Interface Design student. This site is currently under construction. Soon it will contain links
                 to the coursework for my classes at KCC within the the New Media Arts programme. </p>
         </section>
@@ -51,6 +54,13 @@
             </ul>
         </nav>
     </footer>
+
+    <!-- J QUERY -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <!--  GSAP -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.9.2/TweenMax.min.js"></script>
+    <!-- 3D HOVER EFFECT -->
+    <script src="js/3dhover.js"></script>
 </body>
 
 </html>
