added email and resume

--- a/art298/index.html
+++ b/art298/index.html
@@ -40,7 +40,11 @@
                 <li><a
                         href="https://drive.google.com/file/d/18BjaJZwkycXln3EqgwiwaLWhVgRt_mz5/view?usp=drive_link">Resume</a>
                 </li>
-                <li><a href="#" class="coming-soon">Email letter</a></li>
+                <li><a href="https://drive.google.com/file/d/18U3aDuX7dIeePXoO-7h8j0v_H8ONV9F5/view?usp=drive_link">Resume
+                        V_1</a></li>
+                <li><a
+                        href="https://docs.google.com/document/d/1Ydoec-JHMBjbrJz6B8i6PvQR1IrHlvnc24Ti_4g9gYE/edit?usp=sharing">Email
+                        letter</a></li>
                 <li><a href="#" class="coming-soon">Portfolio</a></li>
             </div>
 
