--- a/art249/index.html
+++ b/art249/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Andrew Patyjewicz | Art 128</title>
+    <title>Andrew Patyjewicz | Art 258</title>
     <meta name="description" content="This is my Student Website.">
     <meta name="viewport" content="width=device-width, initial-scale1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -20,6 +20,7 @@
         <nav class="site-nav">
             <ul>
                 <li><a href="../art128/index.html">ART 128</a></li>
+                <li><a href="../art258/index.html">ART 258</a></li>
                 <li><a href="../art298/index.html">ART 298</a></li>
                 <li><a href="../notes/index.html">Notes</a></li>
 
