--- a/art258/index.html
+++ b/art258/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Andrew Patyjewicz | Art 298</title>
+    <title>Andrew Patyjewicz | Art 258</title>
     <meta name="description" content="This is my Student Website.">
     <meta name="viewport" content="width=device-width, initial-scale1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -21,7 +21,7 @@
             <ul>
                 <li><a href="../art128/index.html">ART 128</a></li>
                 <li><a href="../art249/index.html">ART 249</a></li>
-                <li><a href="../art258/index.html">ART 258</a></li>
+                <li><a href="../art298/index.html">ART 298</a></li>
                 <li><a href="../notes/index.html">Notes</a></li>
 
             </ul>
@@ -30,30 +30,24 @@
 
     <main>
         <section class="hero">
-            <h2>Art 298</h2>
+            <h2>Art 258</h2>
             <p>Workshop</p>
         </section>
 
         <section class="coursework">
 
             <div class="website">
-                <h3>Phase 1: Preparation</h3>
-                <li><a
-                        href="https://drive.google.com/file/d/18BjaJZwkycXln3EqgwiwaLWhVgRt_mz5/view?usp=drive_link">Resume</a>
+                <h3>Project 1 Personal Framework: </h3>
+                <li><a href="https://eirean.github.io/simplebase/">Simple Base</a>
                 </li>
-                <li><a href="https://drive.google.com/file/d/18U3aDuX7dIeePXoO-7h8j0v_H8ONV9F5/view?usp=drive_link">Resume
-                        V_1</a></li>
-                <li><a
-                        href="https://docs.google.com/document/d/1Ydoec-JHMBjbrJz6B8i6PvQR1IrHlvnc24Ti_4g9gYE/edit?usp=sharing">Email
-                        letter</a></li>
-                <li><a href="#" class="coming-soon">Portfolio</a></li>
+                <li><a href="#" class="coming-soon">Personal Front-End Framework</a></li>
             </div>
 
             <div class="website">
-                <h3>Phase 2: Work / Study</h3>
-                <li><a href="#" class="coming-soon">Study Plan / Contract</a></li>
-                <li><a href="#" class="coming-soon">Time Sheet</a></li>
-                <li><a href="#" class="coming-soon">Final Presentation</a></li>
+                <h3>Project 2: Client Website</h3>
+                <li><a href="#" class="coming-soon">Client Site - Coded Draft v1</a></li>
+                <li><a href="#" class="coming-soon">Client Site - Coded Draft v2</a></li>
+                <li><a href="#" class="coming-soon">Client Site - Final</a></li>
 
             </div>
         </section>
