added css effects to 258

--- a/art258/index.html
+++ b/art258/index.html
@@ -8,10 +8,12 @@
     <meta name="viewport" content="width=device-width, initial-scale1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.typekit.net/bko1gmu.css">
+    <!-- CITY NIGHTS -->
+    <link rel="stylesheet" href="../css/citynights.css">
     <link href="../css/style.css" rel="stylesheet" type="text/css">
 </head>
 
-<body class="page-sub page-art298">
+<body class="page-sub page-art258">
 
     <header>
         <div class="site-id">
@@ -30,8 +32,8 @@
 
     <main>
         <section class="hero">
-            <h2>Art 258</h2>
-            <p>Workshop</p>
+            <h2 class="citynights">Art 258</h2>
+
         </section>
 
         <section class="coursework">
