--- a/art298/index.html
+++ b/art298/index.html
@@ -8,6 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.typekit.net/bko1gmu.css">
+    <!-- WAVE TEXT -->
+    <link href="https://fonts.googleapis.com/css?family=Righteous&display=swap" rel="stylesheet">
+    <!-- WAVE TEXT CSS -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
     <link href="../css/style.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -30,8 +34,9 @@
 
     <main>
         <section class="hero">
-            <h2>Art 298</h2>
-            <p>Workshop</p>
+            <h2>Art 298
+
+            </h2>
         </section>
 
         <section class="coursework">
