added style tiles

--- a/art249/index.html
+++ b/art249/index.html
@@ -48,9 +48,12 @@
                 <h4>Conceptual Plans</h4>
 
                 <ul>
-                    <li><a href="#" class="coming-soon">Site Map</a></li>
+                    <li><a
+                            href="https://www.figma.com/file/TGrkS6amqfmat99C2YRndc/Client-SlideDeck?type=design&node-id=0-1&mode=design&t=AQneqTt7CNyTYGSr-0">Site
+                            Map</a></li>
                     <li><a href="#" class="coming-soon">Lo-Fi Wireframes / Protoype</a></li>
-                    <li><a href="#" class="coming-soon">Design System / Style Tiles</a></li>
+                    <li><a href="https://xd.adobe.com/view/493a12cc-cff3-40c8-b8b1-b137c8a9bc62-1c69/">Design System /
+                            Style Tiles</a></li>
                 </ul>
 
                 <h4>Iterative Designs</h4>
