--- a/art249/index.html
+++ b/art249/index.html
@@ -51,7 +51,9 @@
                     <li><a
                             href="https://www.figma.com/file/TGrkS6amqfmat99C2YRndc/Client-SlideDeck?type=design&node-id=0-1&mode=design&t=AQneqTt7CNyTYGSr-0">Site
                             Map</a></li>
-                    <li><a href="#" class="coming-soon">Lo-Fi Wireframes / Protoype</a></li>
+                    <li><a
+                            href="https://www.figma.com/file/iBackHszTjzj1eLPAxUiMh/Untitled?type=design&node-id=0%3A1&mode=design&t=MJ0fIWffqWMuSWYd-1">Lo-Fi
+                            Wireframes / Protoype</a></li>
                     <li><a href="https://xd.adobe.com/view/493a12cc-cff3-40c8-b8b1-b137c8a9bc62-1c69/">Design System /
                             Style Tiles</a></li>
                 </ul>
