didnt add anything

--- a/art298/index.html
+++ b/art298/index.html
@@ -13,6 +13,8 @@
     <!-- WAVE TEXT CSS -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
     <link href="../css/style.css" rel="stylesheet" type="text/css">
+    <link href="../css/w" rel="stylesheet" type="text/css">
+
 </head>
 
 <body class="page-sub page-art298">
