fixed resume links

--- a/art298/index.html
+++ b/art298/index.html
@@ -45,11 +45,11 @@
 
             <div class="website">
                 <h3>Phase 1: Preparation</h3>
-                <li><a
-                        href="https://drive.google.com/file/d/18BjaJZwkycXln3EqgwiwaLWhVgRt_mz5/view?usp=drive_link">Resume</a>
+                <li><a href="https://drive.google.com/file/d/18BjaJZwkycXln3EqgwiwaLWhVgRt_mz5/view?usp=drive_link">Resume
+                        V_1</a>
                 </li>
                 <li><a href="https://drive.google.com/file/d/18U3aDuX7dIeePXoO-7h8j0v_H8ONV9F5/view?usp=drive_link">Resume
-                        V_1</a></li>
+                        V_2</a></li>
                 <li><a
                         href="https://docs.google.com/document/d/1Ydoec-JHMBjbrJz6B8i6PvQR1IrHlvnc24Ti_4g9gYE/edit?usp=sharing">Email
                         letter</a></li>
