--- a/art249/index.html
+++ b/art249/index.html
@@ -61,7 +61,9 @@
                 <h4>Iterative Designs</h4>
 
                 <ul>
-                    <li><a href="#" class="coming-soon">Round 1 Mockups (A+B)</a></li>
+                    <li><a
+                            href="https://www.figma.com/file/PzNl4ib8pvzVT1SrmeCXWg/Bar-35-prototype-A?type=design&node-id=0%3A1&mode=design&t=q96WJUVqtlyZP7kD-1">Round
+                            1 Mockups (A)</a></li>
                     <li><a href="#" class="coming-soon">Round 2 Mockups (C)</a></li>
                     <li><a href="#" class="coming-soon">Final Mockups + Protoype</a></li>
                 </ul>
