--- a/art249/index.html
+++ b/art249/index.html
@@ -68,7 +68,9 @@
                             href="https://www.figma.com/file/wv9nCqhvs1SieBtJNrxya0/Prototype-B?type=design&node-id=0%3A1&mode=design&t=eUHPxOp0McJ8IwOR-1">Round
                             1 Mockups (B)</a>
                     </li>
-                    <li><a href="#" class="coming-soon">Round 2 Mockups (C)</a></li>
+                    <li><a
+                            href="https://www.figma.com/file/Am5hQTs8IS2rHww6QSfwOn/Prototype-C?type=design&node-id=0%3A1&mode=design&t=VylPt1f1hIk09b8F-1">Round
+                            2 Mockups (C)</a></li>
                     <li><a href="#" class="coming-soon">Final Mockups + Protoype</a></li>
                 </ul>
 
