--- a/art249/index.html
+++ b/art249/index.html
@@ -71,7 +71,9 @@
                     <li><a
                             href="https://www.figma.com/file/Am5hQTs8IS2rHww6QSfwOn/Prototype-C?type=design&node-id=0%3A1&mode=design&t=VylPt1f1hIk09b8F-1">Round
                             2 Mockups (C)</a></li>
-                    <li><a href="#" class="coming-soon">Final Mockups + Protoype</a></li>
+                    <li><a
+                            href="https://www.figma.com/proto/Am5hQTs8IS2rHww6QSfwOn/Prototype-C?type=design&node-id=66-62&t=gGwKJ78jdPKAWKBZ-1&scaling=min-zoom&page-id=0%3A1&starting-point-node-id=66%3A62&mode=design">Final
+                            Mockups + Protoype</a></li>
                 </ul>
 
                 <h4>Case Study / Portfolio Entry</h4>
