--- a/art249/index.html
+++ b/art249/index.html
@@ -79,7 +79,8 @@
                 <h4>Case Study / Portfolio Entry</h4>
 
                 <ul>
-                    <li><a href="#" class="coming-soon">Case Study / Portfolio Entry</a></li>
+                    <li><a href="https://sites.google.com/hawaii.edu/bar35?usp=sharing">Case Study / Portfolio Entry</a>
+                    </li>
                 </ul>
             </div>
 
