updated time sheets

--- a/art298/index.html
+++ b/art298/index.html
@@ -59,7 +59,7 @@
             <div class="website">
                 <h3>Phase 2: Work / Study</h3>
                 <li><a href="#" class="coming-soon">Study Plan / Contract</a></li>
-                <li><a href="#" class="coming-soon">Time Sheet</a></li>
+                <li><a href="https://docs.google.com/spreadsheets/d/1-G71rdiD7CK2--QIdjmEDTgbjGX6ia36swJcUmFMF30/edit#gid=0">Time Sheet</a></li>
                 <li><a href="#" class="coming-soon">Final Presentation</a></li>
 
             </div>
