added project brief app

--- a/art249/index.html
+++ b/art249/index.html
@@ -89,7 +89,7 @@
                 <h1>Mobile App</h1>
                 <h3>A client-based mobile app UI design with an interactive prototype</h3>
                 <ul>
-                    <li><a href="#" class="coming-soon">Project Brief</a></li>
+                    <li><a href=https://docs.google.com/document/d/1F_y6ShtshAUr8Y0Ipu4x0_Gpub2lUO07Pg9qxLl-mzY/edit?usp=sharing>Project Brief</a></li>
                 </ul>
 
                 <h4>Conceptual Plans</h4>
