--- a/art249/index.html
+++ b/art249/index.html
@@ -89,13 +89,17 @@
                 <h1>Mobile App</h1>
                 <h3>A client-based mobile app UI design with an interactive prototype</h3>
                 <ul>
-                    <li><a href=https://docs.google.com/document/d/1F_y6ShtshAUr8Y0Ipu4x0_Gpub2lUO07Pg9qxLl-mzY/edit?usp=sharing>Project Brief</a></li>
+                    <li><a
+                            href=https://docs.google.com/document/d/1F_y6ShtshAUr8Y0Ipu4x0_Gpub2lUO07Pg9qxLl-mzY/edit?usp=sharing>Project
+                            Brief</a></li>
                 </ul>
 
                 <h4>Conceptual Plans</h4>
 
                 <ul>
-                    <li><a href="#" class="coming-soon">App Map / User Flow Chart</a></li>
+                    <li><a
+                            href="https://www.figma.com/file/CpjAtoupDt85yrtL07uFTk/Flowchart?type=design&node-id=0%3A1&mode=design&t=CtGgsnO7cxa4kEpv-1">App
+                            Map / User Flow Chart</a></li>
                     <li><a href="#" class="coming-soon">Lo-Fi Wireframes / Protoype</a></li>
                     <li><a href="#" class="coming-soon">Design System / Style Tiles</a></li>
                 </ul>
