--- a/art249/index.html
+++ b/art249/index.html
@@ -107,7 +107,9 @@
                 <h4>Iterative Designs</h4>
 
                 <ul>
-                    <li><a href="#" class="coming-soon">Round 1 Mockups (A+B)</a></li>
+                    <li><a
+                            href="https://www.figma.com/proto/8FNpmPgVvp2aZ4yqXEIzK7/Untitled?type=design&node-id=1-3&t=S0cq5CctR4EsuGE3-1&scaling=scale-down&page-id=0%3A1&starting-point-node-id=1%3A3&mode=design">Round
+                            1 Mockups (A+B)</a></li>
                     <li><a href="#" class="coming-soon">Round 2 Mockups (C)</a></li>
                     <li><a href="#" class="coming-soon">Final Mockups + Protoype</a></li>
                 </ul>
