--- a/art298/index.html
+++ b/art298/index.html
@@ -53,13 +53,15 @@
                 <li><a
                         href="https://docs.google.com/document/d/1Ydoec-JHMBjbrJz6B8i6PvQR1IrHlvnc24Ti_4g9gYE/edit?usp=sharing">Email
                         letter</a></li>
-                <li><a href="#" class="coming-soon">Portfolio</a></li>
+                <li><a href="https://sites.google.com/hawaii.edu/andrew-portfolio/home">Portfolio</a></li>
             </div>
 
             <div class="website">
                 <h3>Phase 2: Work / Study</h3>
                 <li><a href="#" class="coming-soon">Study Plan / Contract</a></li>
-                <li><a href="https://docs.google.com/spreadsheets/d/1-G71rdiD7CK2--QIdjmEDTgbjGX6ia36swJcUmFMF30/edit#gid=0">Time Sheet</a></li>
+                <li><a
+                        href="https://docs.google.com/spreadsheets/d/1-G71rdiD7CK2--QIdjmEDTgbjGX6ia36swJcUmFMF30/edit#gid=0">Time
+                        Sheet</a></li>
                 <li><a href="#" class="coming-soon">Final Presentation</a></li>
 
             </div>
