--- a/art249/index.html
+++ b/art249/index.html
@@ -71,8 +71,7 @@
                     <li><a
                             href="https://www.figma.com/file/Am5hQTs8IS2rHww6QSfwOn/Prototype-C?type=design&node-id=0%3A1&mode=design&t=VylPt1f1hIk09b8F-1">Round
                             2 Mockups (C)</a></li>
-                    <li><a
-                            href="https://www.figma.com/proto/Am5hQTs8IS2rHww6QSfwOn/Prototype-C?type=design&node-id=66-62&t=gGwKJ78jdPKAWKBZ-1&scaling=min-zoom&page-id=0%3A1&starting-point-node-id=66%3A62&mode=design">Final
+                    <li><a href="https://github.com/Eirean/bar35.git">Final
                             Mockups + Protoype</a></li>
                 </ul>
 
