--- a/art258/index.html
+++ b/art258/index.html
@@ -49,7 +49,7 @@
             <div class="website">
                 <h3>Project 2: Client Website</h3>
                 <li><a href="bar35_v1/index.html">Client Site - Coded Draft v1</a></li>
-                <li><a href="#" class="coming-soon">Client Site - Coded Draft v2</a></li>
+                <li><a href="bar35_v2/">Client Site - Coded Draft v2</a></li>
                 <li><a href="#" class="coming-soon">Client Site - Final</a></li>
 
             </div>
