--- a/art249/index.html
+++ b/art249/index.html
@@ -100,7 +100,9 @@
                     <li><a
                             href="https://www.figma.com/file/CpjAtoupDt85yrtL07uFTk/Flowchart?type=design&node-id=0%3A1&mode=design&t=CtGgsnO7cxa4kEpv-1">App
                             Map / User Flow Chart</a></li>
-                    <li><a href="#" class="coming-soon">Lo-Fi Wireframes / Protoype</a></li>
+                    <li><a
+                            href="https://www.figma.com/proto/A4sgbgeAGmpNIYnnoMuGTI/Low-Fi?type=design&node-id=1-456&t=D3uEQFUfG1Ge0yuQ-1&scaling=min-zoom&page-id=0%3A1&starting-point-node-id=1%3A426&mode=design">Lo-Fi
+                            Wireframes / Protoype</a></li>
                     <li><a href="#" class="coming-soon">Design System / Style Tiles</a></li>
                 </ul>
 
