added more links

--- a/art249/index.html
+++ b/art249/index.html
@@ -103,7 +103,8 @@
                     <li><a
                             href="https://www.figma.com/proto/A4sgbgeAGmpNIYnnoMuGTI/Low-Fi?type=design&node-id=1-456&t=D3uEQFUfG1Ge0yuQ-1&scaling=min-zoom&page-id=0%3A1&starting-point-node-id=1%3A426&mode=design">Lo-Fi
                             Wireframes / Protoype</a></li>
-                    <li><a href="#" class="coming-soon">Design System / Style Tiles</a></li>
+                    <li><a href="https://xd.adobe.com/view/da9695db-c718-4218-8fff-5420f4f73e9b-8fc5/">Design System /
+                            Style Tiles</a></li>
                 </ul>
 
                 <h4>Iterative Designs</h4>
@@ -113,13 +114,16 @@
                             href="https://www.figma.com/proto/8FNpmPgVvp2aZ4yqXEIzK7/Untitled?type=design&node-id=1-3&t=S0cq5CctR4EsuGE3-1&scaling=scale-down&page-id=0%3A1&starting-point-node-id=1%3A3&mode=design">Round
                             1 Mockups (A+B)</a></li>
                     <li><a href="#" class="coming-soon">Round 2 Mockups (C)</a></li>
-                    <li><a href="#" class="coming-soon">Final Mockups + Protoype</a></li>
+                    <li><a
+                            href="https://www.figma.com/proto/6EPPIPDtcVL5XrEytCA18q/Oachtopus-Prototype-2?type=design&node-id=201-1041&t=1J5pQFsUMR9q1wYK-1&scaling=scale-down&page-id=0%3A1&starting-point-node-id=1%3A3&mode=design">Final
+                            Mockups + Protoype</a></li>
                 </ul>
 
                 <h4>Case Study / Portfolio Entry</h4>
 
                 <ul>
-                    <li><a href="#" class="coming-soon">Case Study / Portfolio Entry</a></li>
+                    <li><a href="https://sites.google.com/hawaii.edu/oachtopus/home">Case Study / Portfolio Entry</a>
+                    </li>
                 </ul>
             </div>
         </section>
