--- a/art298/index.html
+++ b/art298/index.html
@@ -58,11 +58,13 @@
 
             <div class="website">
                 <h3>Phase 2: Work / Study</h3>
-                <li><a href="#" class="coming-soon">Study Plan / Contract</a></li>
+                <li><a
+                        href="https://docs.google.com/document/d/1RArj8U4DHM5nQcZtZAizSX2bLaFepdLFDJzlYuYUjXQ/edit?usp=sharing">Study
+                        Plan / Contract</a></li>
                 <li><a
                         href="https://docs.google.com/spreadsheets/d/1-G71rdiD7CK2--QIdjmEDTgbjGX6ia36swJcUmFMF30/edit#gid=0">Time
                         Sheet</a></li>
-                <li><a href="#" class="coming-soon">Final Presentation</a></li>
+                <li><a href="https://sites.google.com/hawaii.edu/nma-logo-design/home">Final Presentation</a></li>
 
             </div>
         </section>
