--- a/art298/index.html
+++ b/art298/index.html
@@ -42,7 +42,34 @@
         </section>
 
         <section class="coursework">
+            <h2>2024</h2>
+            <div class="website">
+                <h3>Phase 1: Preparation</h3>
 
+                <li><a
+                        href="https://docs.google.com/document/d/1oQLWXnARcWicF87IsKeYsTOwlSeUa-Ou3-O97kcdfUU/edit?usp=sharing">Resume
+                        V_1</a></li>
+                <li><a
+                        href="https://docs.google.com/document/d/1Ydoec-JHMBjbrJz6B8i6PvQR1IrHlvnc24Ti_4g9gYE/edit?usp=sharing">Email
+                        letter</a></li>
+                <li><a href="https://sites.google.com/hawaii.edu/andrew-portfolio/home">Portfolio</a></li>
+            </div>
+
+            <div class="website">
+                <h3>Phase 2: Work / Study</h3>
+                <li><a
+                        href="https://docs.google.com/document/d/1vlJsGkSoqKilcmEcMaexojGNHlM8SxTMB28bmcWvFMU/edit?usp=sharing">Study
+                        Plan / Contract</a></li>
+                <li><a
+                        href="https://docs.google.com/spreadsheets/d/1QBrCIofdByw4hsEnLmK-6t8O7wOwkXevoi0gbW7Jjo0/edit?usp=sharing">Time
+                        Sheet</a></li>
+
+
+            </div>
+        </section>
+
+        <section class="coursework">
+            <h2>2023</h2>
             <div class="website">
                 <h3>Phase 1: Preparation</h3>
                 <li><a href="https://drive.google.com/file/d/18BjaJZwkycXln3EqgwiwaLWhVgRt_mz5/view?usp=drive_link">Resume
