--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <li><a href="art128/index.html">ART 128</a></li>
                 <li><a href="art249/index.html">ART 249</a></li>
                 <li><a href="art258/index.html">ART 258</a></li>
+                <li><a href="art285/index.html">ART 285</a></li>
                 <li><a href="art298/index.html">ART 298</a></li>
                 <li><a href="notes/index.html">Notes</a></li>
 
@@ -43,6 +44,7 @@
                 <li><a href="art128/index.html">ART 128 Interface Programming I</a></li>
                 <li><a href="art249/index.html">ART 249 Interface Design II</a></li>
                 <li><a href="art258/index.html">ART 258 Interface Programming II</a></li>
+                <li><a href="art285/index.html">ART 285 Interface Programming II</a></li>
                 <li><a href="art298/index.html">ART 298 Work/Study Studio</a></li>
             </ul>
         </section>
