--- a/art285/index.html
+++ b/art285/index.html
@@ -40,7 +40,7 @@
 
             <div class="website">
                 <h3>Portfolio Website</h3>
-                <li><a href="https://eirean.github.io/Portfolio/">Portfolio V_1</a>
+                <li><a href="../Portfolio/index">Portfolio V_1</a>
                 </li>
 
             </div>
