--- a/art285/portfolio/index.html
+++ b/art285/portfolio/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>John Doe Portfolio</title>
+    <title>Andrew Patyjewicz Portfolio</title>
 
     <!-- HTML5 -->
     <!--[if lt IE 9]>
