--- a/art128/index.html
+++ b/art128/index.html
@@ -19,6 +19,7 @@
             <ul>
                 <li><a href="../art249/index.html">ART 249</a></li>
                 <li><a href="../art258/index.html">ART 258</a></li>
+                <li><a href="../art285/">ART 285</a></li>
                 <li><a href="../art298/index.html">ART 298</a></li>
                 <li><a href="../notes/index.html">Notes</a></li>
             </ul>
