--- a/art258/index.html
+++ b/art258/index.html
@@ -23,6 +23,7 @@
             <ul>
                 <li><a href="../art128/index.html">ART 128</a></li>
                 <li><a href="../art249/index.html">ART 249</a></li>
+                <li><a href="../art285/">ART 285</a></li>
                 <li><a href="../art298/index.html">ART 298</a></li>
                 <li><a href="../notes/index.html">Notes</a></li>
 
@@ -49,7 +50,7 @@
             <div class="website">
                 <h3>Project 2: Client Website</h3>
                 <li><a href="bar35_v1/index.html">Client Site - Coded Draft v1</a></li>
-                <li><a href="bar35_v2/index.html">Client Site - Coded Draft v2</a></li>
+                <li><a href="#" class="coming-soon">Client Site - Coded Draft v2</a></li>
                 <li><a href="#" class="coming-soon">Client Site - Final</a></li>
 
             </div>
