--- a/art285/index.html
+++ b/art285/index.html
@@ -23,6 +23,7 @@
             <ul>
                 <li><a href="../art128/index.html">ART 128</a></li>
                 <li><a href="../art249/index.html">ART 249</a></li>
+                <li><a href="../art258/">ART 258</a></li>
                 <li><a href="../art298/index.html">ART 298</a></li>
                 <li><a href="../notes/index.html">Notes</a></li>
 
