added project brief

--- a/art285/index.html
+++ b/art285/index.html
@@ -43,6 +43,9 @@
                 <h3>Portfolio Website</h3>
                 <li><a href="../Portfolio/index">Portfolio V_1</a>
                 </li>
+                <li><a
+                        href="https://docs.google.com/document/d/18wNeS12n9w97NBXgpTk_PDG51btBev-yt-aA_XxX6_Q/edit#heading=h.l0wu82r8dv9x">Project
+                        Brief V_1</a></li>
 
             </div>
 
@@ -60,7 +63,7 @@
 
         </section>
 
-        sect
+
     </main>
 
     <footer>
