fixed resume links

--- a/art298/index.html
+++ b/art298/index.html
@@ -48,10 +48,10 @@
                 <h3>Phase 1: Preparation</h3>
 
                 <li><a
-                        href="https://docs.google.com/document/d/1oQLWXnARcWicF87IsKeYsTOwlSeUa-Ou3-O97kcdfUU/edit?usp=sharing">Resume
-                        V_1</a></li>
+                        href="https://acrobat.adobe.com/link/review?uri=urn:aaid:scds:US:fe0f8224-2ce3-3822-9f7b-9d41e91137b4">Resume
+                        V_2</a></li>
                 <li><a
-                        href="https://docs.google.com/document/d/1Ydoec-JHMBjbrJz6B8i6PvQR1IrHlvnc24Ti_4g9gYE/edit?usp=sharing">Email
+                        href="https://docs.google.com/document/d/1oQLWXnARcWicF87IsKeYsTOwlSeUa-Ou3-O97kcdfUU/edit?usp=sharing">Email
                         letter</a></li>
                 <li><a href="https://sites.google.com/hawaii.edu/andrew-portfolio/home">Portfolio</a></li>
             </div>
