added scroll anim and updated studensite

--- a/art285/index.html
+++ b/art285/index.html
@@ -51,6 +51,7 @@
                 <h3>Code Tests</h3>
                 <li><a href="../art285/portfolio-test-0.1/index.html">Portfolio Test 0.1</a></li>
                 <li><a href="../art285/swiper_test_1/index.html">Swiper Test 1</a></li>
+                <li><a href="../art285/scroll_ani_v_1/index.html">Scroll Animation Test</a></li>
 
             </div>
 
