made some changes

--- a/art285/scroll_ani_v_1/index.html
+++ b/art285/scroll_ani_v_1/index.html
@@ -39,8 +39,8 @@
             <div class="square"></div>
         </div>
         <div class="masthead">
-            <h1>masthead</h1>
-            <p>Press on the heart if you are also a CSS Developer 😃.</p>
+            <h1>Portfolio</h1>
+
         </div>
     </section>
     <section id="tiles" style="--name:--tiles-s;">
