made some minor changes

--- a/art285/portfolio_v_1/index.html
+++ b/art285/portfolio_v_1/index.html
@@ -32,9 +32,7 @@
         <section class="hero">
             <h1>Hello, I'm Andrew... Welcome to my Portfolio site!
             </h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quia accusantium atque facilis quis
-                autem
-                minima harum magni recusandae commodi!</p>
+            <p>I am graphic and web designer</p>
         </section>
 
 
@@ -42,27 +40,29 @@
             <ul class="project-list">
 
                 <li>
-                    <a href="#"><img src="/images/durer_1.jpg" alt="placeholder" width="300" height="300"></a>
+                    <a href="#">Bar 35 Website<img src="/images/bar_35.png" alt="placeholder" width="300"
+                            height="300"></a>
                 </li>
                 <li>
-                    <a href="#"><img src="/images/durer_3.jpg" alt="placeholder" width="300" height="300"></a>
+                    <a href="#">Magazine Layouts<img src="/images/durer_3.jpg" alt="placeholder" width="300"
+                            height="300"></a>
                 </li>
                 <li>
-                    <a href="#"><img src="/images/crete_tshirt.jpg" alt="placeholder" width="400" height="400"></a>
+                    <a href="#">Tourism Logo<img src="/images/crete_tshirt.jpg" alt="placeholder" width="400"
+                            height="400"></a>
                 </li>
                 <!-- <li>
-                    <a href="#"><img src="https://via.placeholder.com/500" alt="placeholder" width="250"
-                            height="250"></a>
-                </li>
-                <li>
-                    <a href="#"><img src="https://via.placeholder.com/500" alt="placeholder" width="250"
-                            height="250"></a>
-                </li>
-                <li>
-                    <a href="#"><img src="https://via.placeholder.com/500" alt="placeholder" width="250"
-                            height="250"></a>
-                </li> -->
-
+                        <a href="#"><img src="https://via.placeholder.com/500" alt="placeholder" width="250"
+                                height="250"></a>
+                        </li>
+                        <li>
+                            <a href="#"><img src="https://via.placeholder.com/500" alt="placeholder" width="250"
+                                    height="250"></a>
+                        </li>
+                        <li>
+                            <a href="#"><img src="https://via.placeholder.com/500" alt="placeholder" width="250"
+                                    height="250"></a>
+                        </li> -->
 
             </ul>
 
@@ -70,7 +70,7 @@
     </main>
 
     <footer class="site-footer">
-        [Footer Goes Here]
+        Logo Goes Here
     </footer>
 
 </body>
