--- a/art285/index.html
+++ b/art285/index.html
@@ -44,6 +44,7 @@
 
                 <li><a href="../art285/portfolio_v_1/index.html">Portfolio V_1</a>
                 </li>
+                <li><a href="../art285/portfolio_v_2/index.html">Portfolio V_2</a></li>
 
                 <li><a
                         href="https://docs.google.com/document/d/18wNeS12n9w97NBXgpTk_PDG51btBev-yt-aA_XxX6_Q/edit#heading=h.l0wu82r8dv9x">Project
