--- a/art285/portfolio_v_2/index.html
+++ b/art285/portfolio_v_2/index.html
@@ -40,15 +40,15 @@
             <ul class="project-list">
 
                 <li>
-                    <a href="#">Bar 35 Website<img src="../images/bar_35.png" alt="placeholder" width="300"
+                    <a href="#">Bar 35 Website<img src="images/bar_35.png" alt="placeholder" width="300"
                             height="300"></a>
                 </li>
                 <li>
-                    <a href="#">Magazine Layouts<img src="../images/durer_3.jpg" alt="placeholder" width="300"
+                    <a href="#">Magazine Layouts<img src="images/durer_3.jpg" alt="placeholder" width="300"
                             height="300"></a>
                 </li>
                 <li>
-                    <a href="#">Tourism Logo<img src="../images/crete_tshirt.jpg" alt="placeholder" width="400"
+                    <a href="#">Tourism Logo<img src="images/crete_tshirt.jpg" alt="placeholder" width="400"
                             height="400"></a>
                 </li>
                 <!-- <li>
