--- a/art285/portfolio_v_2/index.html
+++ b/art285/portfolio_v_2/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test 0.1</title>
+    <title>Portfolio Version 2</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +18,7 @@
 
     <header class="site-header">
         <div class="site-logo">
-            [Logo Goes Here]
+            Andrew P.
         </div>
         <nav class="site-nav">
             <ul>
@@ -29,7 +29,7 @@
     </header>
 
     <main>
-        <section class="hero-text">
+        <section class="magazine-hero-text">
             <h1>Hello, I'm Andrew
             </h1>
             <p><span>Welcome to my portfolio</span></p>
